--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "author": "Andrés Mateo",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^4.0.1",
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
-        "mongoose": "^5.9.14"
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.9.14",
+        "mongoose-unique-validator": "^2.0.3"
     }
 }
